# obsidian_telegram_bot

./: .setting.py.swp  LICENSE  main.py  new_note.md  pyproject.toml  setting.py
