[tool.poetry]
name = "obsidian-telegram-bot"
version = "0.1.0"
description = ""
authors = ["desert71 <amkazennov99@gmail.com>"]
readme = "README.md"
packages = [{include = "obsidian_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
